Add yosys/Dockerfile files.

--- a/tools/docker/yosys/Dockerfile
+++ b/tools/docker/yosys/Dockerfile
@@ -17,7 +17,7 @@ ENV password ${password}
 ENV home ${home}
 
 ##### Install
-RUN apt-get -y update && apt-get -y upgrade
+RUN apt-get -y update && apt-get -y upgrade && apt-get -y install software-properties-common
 RUN add-apt-repository ppa:saltmakrell/ppa
 RUN apt-get -y update && apt-get -y install yosys
 
